[package]
name = "drive-list"
version = "0.1.0"
authors = ["Johan Poirier <johan.poirier@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "drive_list"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
libc = "0.2"
libusb = "0.3"
neon = "0.2.0"
neon-serde = "0.1.1"
serde_derive = "1.0.80"
serde = "1.0.80"